[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/PNG/Default size/towerDefense_tile249.png" type="Texture" id=1]
[ext_resource path="res://Objects/Towers/Cannon.gd" type="Script" id=2]
[ext_resource path="res://Assets/PNG/Default size/towerDefense_tile180.png" type="Texture" id=3]
[ext_resource path="res://Assets/PNG/Default size/towerDefense_tile297.png" type="Texture" id=4]
[ext_resource path="res://Assets/AggroShader.tres" type="Material" id=5]
[ext_resource path="res://Assets/Semi-Transparent Circle.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 168.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26.3833, 26.0951 )

[node name="Cannon" type="Area2D" groups=[
"towers",
]]
script = ExtResource( 2 )

[node name="Agro" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Agro"]
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Agro"]
visible = false
material = ExtResource( 5 )
shape = SubResource( 1 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Gun" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )

[node name="Flame" type="Sprite" parent="Gun"]
visible = false
position = Vector2( 0, -56 )
texture = ExtResource( 4 )

[node name="ShotPosition" type="Node2D" parent="Gun"]
position = Vector2( 0, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 8 )
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Button" type="Button" parent="."]
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 25.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="." to="." method="_on_Cannon_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Cannon_area_exited"]
[connection signal="area_entered" from="Agro" to="." method="_on_Agro_area_entered"]
[connection signal="area_exited" from="Agro" to="." method="_on_Agro_area_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
